--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,11 +7,38 @@ jobs:
   deploy:
     runs-on: self-hosted
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
 
-    - name: Copy HTML to destination folder
-      run: |
-        sudo cp -r ./ /home/ubuntu/docker/volumes/universodomedo/site
-      working-directory: ${{ github.workspace }}
+     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18' # or any version you are using
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run TypeScript checks
+        run: npm run lint
+
+      - name: Run tests
+        run: npm test
+
+      - name: Build project
+        run: npm run build
+
+      - name: Cache node_modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: build
+          path: dist
