--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3.8'
 
 services:
-  vite-app:
+  universodomedo:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: vite-app
     ports:
-      - "5173:5173"
+      - "80:5173"
     volumes:
       - .:/app
     command: npm run dev
