--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "udm-types": "^0.0.7"
   },
   "devDependencies": {
+    "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-slick": "^0.23.13",
