--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.24.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "udm-dice": "^0.0.1",
     "udm-types": "^0.0.7"
   },
   "devDependencies": {
