Refatoração de arquivos

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "@components/*": ["Components/*"],
       "@layouts/*": ["Layouts/*"],
       "@pages/*": ["Pages/*"],
+      "@types/*": ["Types/*"],
     },
     "allowImportingTsExtensions": true,
     "noEmit": true,
