Correções para build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "module": "commonjs",
     "strict": true,
     "traceResolution": true,
-    "types": ["node"]
+    "types": ["node"],
+    "skipLibCheck": true,
   },
   "include": ["src"],
 }
