--- a/.github/workflows/alef.yml
+++ b/.github/workflows/alef.yml
@@ -3,11 +3,11 @@ name: Build and Deploy
 on:
   push:
     branches:
-      - ts
+      - alef-casa
 
 jobs:
   build:
-    runs-on: udm-oc1-a
+    runs-on: alef
 
     steps:
     - name: Checkout code
