--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "start": "node dist/index.js",
     "preview": "vite preview"
+    "prod": "vite --host"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
