fixing typos in workflow main.yml (steps were ssteps)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: dev-udm-oc1-a
     
-    ssteps:
+    steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
