--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,13 +17,8 @@ jobs:
       uses: actions/setup-docker@v2
 
     - name: Build the project in a Docker container
-      run: |
-         docker run --name build-container --rm -v ${GITHUB_WORKSPACE}:/app -w /app node:18 bash -c "
-          npm install &&
-          npm install -g typescript &&
-          npm install -g vite &&
-          npm run build
-        "
+      run: | 
+        docker run --name build-container --rm -v ${GITHUB_WORKSPACE}:/app -w /app node:18 bash -c "npm install && npm install -g typescript && npm install -g vite && npm run build"
 
     - name: Copy build artifacts to Docker volume
       run: |
