--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
 
     - name: Build the project in a Docker container
       run: | 
-        docker run --name build-container --rm -v ${GITHUB_WORKSPACE}:/app -w /app node:18 bash -c "npm install && npm install -g typescript && npm install -g vite && npm run build"
+        docker run --name build-container --rm -v ${GITHUB_WORKSPACE}:/app -w /app node:18 bash -c "npm install && npm install -g typescript && npm install -g vite && npm run build:no-check"
 
     - name: Copy build artifacts to Docker volume
       run: |
