--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-slick": "^0.30.2",
+    "react-tabs": "^6.0.2",
     "slick-carousel": "^1.8.1",
     "udm-dice": "^0.0.2",
     "udm-types": "^0.0.8"
