--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "@layouts/*": ["Layouts/*"],
       "@pages/*": ["Pages/*"],
       "@types/*": ["Types/*"],
+      "@redux/*": ["Redux/*"],
     },
     "allowImportingTsExtensions": true,
     "noEmit": true,
@@ -19,6 +20,7 @@
     "traceResolution": true,
     "types": ["node"],
     "skipLibCheck": true,
+    "typeRoots": ["./node_modules/@types", "./src"]
   },
-  "include": ["src"],
+  "include": ["src/**/*"],
 }
