--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-ga4": "^2.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
+    "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
     "react-tabs": "^6.0.2",
     "react-toastify": "^10.0.5",
