--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
       with:
-        submodules: true  # Ensure submodules are updated
+        submodules: true  # Ensure submodules are updated nice
 
     - name: Prepare Docker files
       run: |
