--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
+    "react-joyride": "^2.9.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-select": "^5.8.0",
