--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "prod": "vite --host"
   },
   "dependencies": {
+    "@auth-kit/react-router": "^3.1.3",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
+    "jose": "^5.9.4",
     "react": "^18.3.1",
+    "react-auth-kit": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
     "react-joyride": "^2.9.2",
@@ -33,6 +36,7 @@
     "udm-types": "^0.1.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
