--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = deployments/udm-deployment
 	url = git@github.com:universodomedo/deployments.git
 	branch = universodomedo.com-deployment
+[submodule "websocket"]
+	path = websocket
+	url = git@github.com:universodomedo/galadriel.git
