adding galadirel submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = deployments/udm-deployment
 	url = git@github.com:universodomedo/deployments.git
 	branch = universodomedo.com-deployment
+[submodule "galadriel"]
+	path = galadriel
+	url = git@github.com:universodomedo/galadriel.git
+	branch = main
