--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/ws": "^8.5.12",
