--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "Classes/*": ["Classes/*"],
       "Componentes/*": ["Componentes/*"],
       "Contextos/*": ["Contextos/*"],
+      "Dados/*": ["Dados/*"],
       "Layouts/*": ["Layouts/*"],
       "Paginas/*": ["Paginas/*"],
       "Providers/*": ["Providers/*"],
