vou ter q mexer na logica de construção dos contextos para aguardar antes de iniciar o proximo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "Componentes/*": ["Componentes/*"],
       "Contextos/*": ["Contextos/*"],
       "Dados/*": ["Dados/*"],
+      "Hooks/*": ["Hooks/*"],
       "Layouts/*": ["Layouts/*"],
       "Paginas/*": ["Paginas/*"],
       "Providers/*": ["Providers/*"],
