Visual da secao principal estavel. Vou tentar mudar os svgs para aplicar cor em hover e tmb tentar aplicar a neblina

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,14 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
+      "App/*": ["app/*"],
       "Componentes/*": ["componentes/*"],
+      "Contextos/*": ["contextos/*"],
+      "Embrulhos/*": ["embrulhos/*"],
       "Helpers/*": ["helpers/*"],
+      "Hooks/*": ["hooks/*"],
+      "Provedores/*": ["provedores/*"],
+      "Servicos/*": ["servicos/*"],
       "Uteis/*": ["uteis/*"],
     },
     "allowImportingTsExtensions": true,
