--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-smoke": "^1.1.0",
+    "react-svg": "^16.3.0",
     "three": "^0.173.0"
   },
   "devDependencies": {
