--- a/package.json
+++ b/package.json
@@ -14,22 +14,35 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@react-three/drei": "^10.0.3",
     "@react-three/fiber": "^9.0.4",
     "@tanstack/react-query": "^5.66.9",
+    "@types/d3-axis": "^3.0.6",
+    "@types/d3-format": "^3.0.4",
+    "@types/d3-scale": "^4.0.9",
+    "@types/d3-selection": "^3.0.11",
     "axios": "^1.7.9",
+    "d3-axis": "^3.0.0",
+    "d3-format": "^3.1.0",
+    "d3-scale": "^4.0.2",
+    "d3-selection": "^3.0.0",
     "gsap": "^3.12.7",
     "image-size": "^1.2.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-smoke": "^1.1.0",
     "react-svg": "^16.3.0",
-    "three": "^0.173.0"
+    "three": "^0.173.0",
+    "types-nora-api": "^0.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
