--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,27 +1,26 @@
-name: Deploy Sandbox Container
+name: Deploy universodomedo.com 
 
 on:
   push:
     branches:
-      - sandbox
+      - dev 
 
 jobs:
   deploy:
-    runs-on: dev-udm-oc1-a  # Self-hosted runner
+    runs-on: oc1-a # Use a GitHub-hosted runner
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Node.js v22.14
-      uses: actions/setup-node@v3
+      uses: actions/checkout@v4
       with:
-        node-version: '22.14'
+        submodules: true  # Ensure submodules are updated
 
-    - name: Install dependencies
-      run: npm install
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    
+    - name: Prepare Docker files
+      run: |
+        cp -r deployment/docker/* ./
 
-    - name: Start Next.js app
-      run: npm run run dev
-      env:
-        NODE_ENV: production
+    - name: Build and deploy containers with Docker Compose
+      run: docker compose -p universodomedo up --build -d --force-recreate
