--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@react-three/drei": "^10.0.3",
     "@react-three/fiber": "^9.0.4",
     "@tanstack/react-query": "^5.66.9",
@@ -42,7 +43,7 @@
     "react-smoke": "^1.1.0",
     "react-svg": "^16.3.0",
     "three": "^0.173.0",
-    "types-nora-api": "^0.0.8"
+    "types-nora-api": "^0.0.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
