adding env file to workflow

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -17,7 +17,12 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
-    
+
+    - name: Create .env file from secrets
+      run: |
+        echo "NEXT_PUBLIC_BACKEND_URL=${{ secrets.NEXT_PUBLIC_BACKEND_URL }}" >> .env
+        echo "NODE_ENV=production" >> .env
+
     - name: Prepare Docker files
       run: |
         cp -r deployment/docker/* ./
