--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "d3-format": "^3.1.0",
     "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
+    "dotenv": "^16.4.7",
     "gsap": "^3.12.7",
     "image-size": "^1.2.0",
     "lodash": "^4.17.21",
