--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Create .env file from secrets
       run: |
         echo "NEXT_PUBLIC_BACKEND_URL=${{ secrets.NEXT_PUBLIC_BACKEND_URL }}" >> .env
-        echo "NODE_ENV=production" >> .env
+        echo "NEXT_PUBLIG_ENV=${{ secrets.NEXT_PUBLIG_ENV  }}" >> .env
 
     - name: Prepare Docker files
       run: |
