Finalizando validações de update de username

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
       "Hooks/*": ["hooks/*"],
       "Provedores/*": ["provedores/*"],
       "Servicos/*": ["servicos/*"],
-      "Uteis/*": ["uteis/*"],
+      "Uteis/*": ["uteis/*"]
     },
     "allowImportingTsExtensions": true,
   },
