--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^19.0.0",
     "react-smoke": "^1.1.0",
     "react-svg": "^16.3.0",
+    "socket.io-client": "^4.8.1",
     "three": "^0.173.0",
     "types-nora-api": "^0.0.21"
   },
