Passando pagina de personagens para contexto

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/d3-format": "^3.0.4",
     "@types/d3-scale": "^4.0.9",
     "@types/d3-selection": "^3.0.11",
+    "@uiw/react-md-editor": "^4.0.5",
     "axios": "^1.7.9",
     "d3-axis": "^3.0.0",
     "d3-format": "^3.1.0",
@@ -41,6 +42,7 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-smoke": "^1.1.0",
     "react-svg": "^16.3.0",
     "socket.io-client": "^4.8.1",
