Alterando estrutura de pastas para usar ControladorSlot, para cabeçalho opcional e validação de usuario obrigatorio Alterando retornos do backend para receber code status usuario opcional

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
       "Contextos/*": ["contextos/*"],
       "Helpers/*": ["helpers/*"],
       "Hooks/*": ["hooks/*"],
+      "Layouts/*": ["layouts/*"],
       "Libs/*": ["libs/*"],
       "Uteis/*": ["uteis/*"]
     },
