--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-menubar": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-three/drei": "^10.0.3",
     "@react-three/fiber": "^9.0.4",
@@ -38,23 +40,26 @@
     "image-size": "^1.2.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
-    "next": "15.1.7",
+    "next": "^15.3.1",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
+    "react-slick": "^0.30.3",
     "react-smoke": "^1.1.0",
     "react-svg": "^16.3.0",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "three": "^0.173.0",
-    "types-nora-api": "^0.0.31"
+    "types-nora-api": "^0.0.32"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/lodash.debounce": "^4.0.9",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
     "@types/react-dom": "^19",
+    "@types/react-slick": "^0.23.13",
     "@types/three": "^0.173.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
