--- a/package.json
+++ b/package.json
@@ -45,13 +45,14 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
+    "react-select": "^5.10.1",
     "react-slick": "^0.30.3",
     "react-smoke": "^1.1.0",
     "react-svg": "^16.3.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "three": "^0.173.0",
-    "types-nora-api": "^0.0.32"
+    "types-nora-api": "^0.0.37"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
