--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "d3-format": "^3.1.0",
     "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.7",
     "gsap": "^3.12.7",
     "image-size": "^1.2.0",
@@ -52,7 +54,7 @@
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "three": "^0.173.0",
-    "types-nora-api": "^0.0.70"
+    "types-nora-api": "^0.0.71"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
