- Implementando serviços para depara de usuarios existentes; - Primeiro visual do chat e avatar de usuarios no chat;

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
       "Hooks/*": ["hooks/*"],
       "Layouts/*": ["layouts/*"],
       "Libs/*": ["libs/*"],
+      "Redux/*": ["redux/*"],
       "Uteis/*": ["uteis/*"]
     },
     "allowImportingTsExtensions": true,
