--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-three/drei": "^10.0.3",
     "@react-three/fiber": "^9.0.4",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.66.9",
     "@types/d3-axis": "^3.0.6",
     "@types/d3-format": "^3.0.4",
@@ -48,6 +49,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
+    "react-redux": "^9.2.0",
     "react-select": "^5.10.1",
     "react-slick": "^0.30.3",
     "react-smoke": "^1.1.0",
@@ -55,7 +57,7 @@
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "three": "^0.173.0",
-    "types-nora-api": "^0.0.95"
+    "types-nora-api": "^0.0.96"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
