--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
+      "Adaptadores/*": ["adaptadores/*"],
       "App/*": ["app/*"],
       "Componentes/*": ["componentes/*"],
       "Contextos/*": ["contextos/*"],
