- Alteração do favicon - Alteração da tela de aventura, padronizando alteração de conteudo em pagina SPA

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
       "Adaptadores/*": ["adaptadores/*"],
       "App/*": ["app/*"],
       "Componentes/*": ["componentes/*"],
+      "Constantes/*": ["constantes/*"],
       "Contextos/*": ["contextos/*"],
       "Helpers/*": ["helpers/*"],
       "Hooks/*": ["hooks/*"],
